    - Ticket #5330, LAV Video Decoder: Improve DVD subtitles timeout in some cases
    - Ticket #5333, LAV Splitter: Fix handling of some Blu-Ray playlist
* Updated Basque, British English, Catalan, Chinese (Simplified), Czech, Dutch, Finnish, French, Galician,
  German, Greek, Japanese, Korean, Malay, Polish, Romanian, Russian, Serbian, Slovak, Spanish, Swedish
  Ukrainian and Vietnamese translations
! EVR-CP/Sync renderers could produce wrong colors
! Do not mirror the status bar and the time indicator when using an RTL layout
! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
! Ticket #5183, Fix a rare crash when processing after playback event
! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
! Ticket #5241, Improve the handling of RTL layout for dockable bars (Playlist, Subresync, etc.)
! Ticket #5247, "Information" panel was not showing new lines until window resize
! Ticket #5259, The auto fit factor could not be modified unless auto fit was used as auto-zoom
! Ticket #5262, The "Go to next/previous subtitle" feature did not work for some subtitles
! Ticket #5274, Dockable bars: Improve reloading of saved state
! Ticket #5280, The /nofocus command line option did nothing when starting MPC-HC
! Ticket #5314, If an explicit start time was set (for example from the command line or a favorite),
  the saved position wrongly overwrote the position of the previously opened file
! Ticket #5324, Use more common "kb/s" instead of "Kb/s" as bitrate unit
! Ticket #5326, Prevent the main window from stealing the mouse focus from the D3D fullscreen window
  when using always on top. It could cause unintentional mouse clicks in the hidden main
  window and prevented the mouse pointer from being correctly hidden